--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -38,63 +38,52 @@
         </header>
 
         <main class="hero">
-            <h1><span class="gradient-text">SuperPower's</span></h1>
-            <h2>Official Website</h2>
-            <div class="hero-buttons">
-                <a href="/about/index.html">
-                    <button class="btn btn-primary">About Us</button>
-                </a>
-                <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" target="_blank">
-                    <button class="btn btn-secondary">Lectures</button>
-                </a>
-                <a href="https://github.com/TongjiSuperPower" target="_blank">
-                    <button class="btn btn-secondary">Github</button>
-                </a>
-            </div>
+            <h1><span class="gradient-text">SuperPower</span></h1>
+            <h2>About Us</h2>
+            <h3>过往荣誉</h3>
         </main>
 
         <section class="project-grid">
 
             <article class="project-card">
-                <div class="card-icon">📚</div>
-                <h3>开源汇总</h3>
-                <p>一起共建开源环境</p>
-                <p>人人为我，我为人人</p>
+                <div class="card-icon">🥉</div>
+                <h3>2024年联盟赛上海站季军</h3>
+                <p>队伍在联盟赛取得的最好成绩</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
             <article class="project-card">
-                <div class="card-icon">🌞</div>
-                <h3>领导层概述</h3>
-                <p>一支优秀的队伍源自一个更优秀的领导层</p>
+                <div class="card-icon">🥉</div>
+                <h3>2025年联盟赛上海站季军</h3>
+                <p>全体队员在李珂轩队长的引领下，成功蝉联上海站季军！</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
             <article class="project-card">
-                <div class="card-icon">🤖</div>
-                <h3>机器人介绍</h3>
-                <p>一众优秀的机器人为队伍立下汗马功劳</p>
+                <div class="card-icon">🏆</div>
+                <h3>2025年分区赛东部赛区冠军</h3>
+                <p>我们是冠军！</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
             <article class="project-card">
-                <div class="card-icon">🎮</div>
-                <h3>精彩赛事</h3>
-                <p>志豪杯即将开赛</p>
+                <div class="card-icon">🎉</div>
+                <h3>2025年国赛八强</h3>
+                <p>再创历史！</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
             <article class="project-card">
-                <div class="card-icon">🎁</div>
-                <h3>周边商城</h3>
-                <p>精心设计的周边翘首以盼</p>
+                <div class="card-icon">📄</div>
+                <h3>2025年开源三等奖</h3>
+                <p>sp_vision_25的开源大受好评，我队首次在开源方面获奖</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
             <article class="project-card">
-                <div class="card-icon">📪</div>
-                <h3>联系我们</h3>
-                <p>欢迎任何赞助、交流活动</p>
+                <div class="card-icon">⭐</div>
+                <h3>RM Award 2025 —— 李珂轩</h3>
+                <p>太阳，无需多言✋😭✋</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
