补药墙壁我

--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@
 
             <article class="project-card">
                 <div class="card-icon">⭐</div>
-                <h3>RM Award 2025 —— 李珂轩</h3>
+                <h3>RM Award 2025 —— 李柯轩</h3>
                 <p>太阳，无需多言✋😭✋</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
