又药被枪毙哩

--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
             <article class="project-card">
                 <div class="card-icon">🥉</div>
                 <h3>2025年联盟赛上海站季军</h3>
-                <p>全体队员在李珂轩队长的引领下，成功蝉联上海站季军！</p>
+                <p>全体队员在李柯轩队长的引领下，成功蝉联上海站季军！</p>
                 <div class="card-bg-image" style="background-image: none;"></div>
             </article>
 
