--- a/competition/competition.html
+++ b/competition/competition.html
@@ -89,7 +89,7 @@
                     <div class="venue-image-placeholder">
 
                         <img src="/images/dy.JPG" alt="" class="venue-slide active-slide">
-
+                        <img src="/images/liuzh.JPG" alt="" class="venue-slide">
                         <img src="/images/lzh.JPG" alt="" class="venue-slide">
                         <img src="/images/nwx.JPG" alt="" class="venue-slide">
                         <img src="/images/wry.JPG" alt="" class="venue-slide">
