--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
                 <h3>开源汇总</h3>
                 <p>一起共建开源环境</p>
                 <p>人人为我，我为人人</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">🌞</div>
                 <h3>领导层概述</h3>
                 <p>一支优秀的队伍源自一个更优秀的领导层</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/logo.png');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">🤖</div>
                 <h3>机器人介绍</h3>
                 <p>一众优秀的机器人为队伍立下汗马功劳</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image:url('/images/ascento.jpg');"></div>
             </article>
 
             <a href="/competition/competition.html">
@@ -83,7 +83,7 @@
                     <div class="card-icon">🎮</div>
                     <h3>精彩赛事</h3>
                     <p>志豪杯即将开赛</p>
-                    <div class="card-bg-image" style="background-image: none;"></div>
+                    <div class="card-bg-image" style="background-image: url('/images/champion.jpg');"></div>
                 </article>
             </a>
 
@@ -91,14 +91,14 @@
                 <div class="card-icon">🎁</div>
                 <h3>周边商城</h3>
                 <p>精心设计的周边翘首以盼</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url(images/surroundings.jpg);"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">📪</div>
                 <h3>联系我们</h3>
                 <p>欢迎任何赞助、交流活动</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url(images/contact.png);"></div>
             </article>
 
         </section>
