bug fix : wrong img path in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="card-icon">🤖</div>
                 <h3>机器人介绍</h3>
                 <p>一众优秀的机器人为队伍立下汗马功劳</p>
-                <div class="card-bg-image" style="background-image:url('/images/ascento.jpg');"></div>
+                <div class="card-bg-image" style="background-image:url('/images/ascento.JPG');"></div>
             </article>
 
             <a href="/competition/competition.html">
@@ -91,14 +91,14 @@
                 <div class="card-icon">🎁</div>
                 <h3>周边商城</h3>
                 <p>精心设计的周边翘首以盼</p>
-                <div class="card-bg-image" style="background-image: url(images/surroundings.jpg);"></div>
+                <div class="card-bg-image" style="background-image: url('images/surroundings.jpg');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">📪</div>
                 <h3>联系我们</h3>
                 <p>欢迎任何赞助、交流活动</p>
-                <div class="card-bg-image" style="background-image: url(images/contact.png);"></div>
+                <div class="card-bg-image" style="background-image: url('images/contact.png');"></div>
             </article>
 
         </section>
