add communication page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                 <h3>开源汇总</h3>
                 <p>一起共建开源环境</p>
                 <p>人人为我，我为人人</p>
-                <div class="card-bg-image" style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);"></div>
+                <div class="card-bg-image"
+                    style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);">
+                </div>
             </article>
 
             <article class="project-card">
@@ -94,12 +96,14 @@
                 <div class="card-bg-image" style="background-image: url('images/surroundings.jpg');"></div>
             </article>
 
-            <article class="project-card">
-                <div class="card-icon">📪</div>
-                <h3>联系我们</h3>
-                <p>欢迎任何赞助、交流活动</p>
-                <div class="card-bg-image" style="background-image: url('images/contact.png');"></div>
-            </article>
+            <a href="/communication/communication.html">
+                <article class="project-card">
+                    <div class="card-icon">📪</div>
+                    <h3>联系我们</h3>
+                    <p>欢迎任何赞助、交流活动</p>
+                    <div class="card-bg-image" style="background-image: url('images/contact.png');"></div>
+                </article>
+            </a>
 
         </section>
 
