add logo in index.html and some pics in about.html

--- a/about/about.html
+++ b/about/about.html
@@ -50,42 +50,42 @@
                 <div class="card-icon">🥉</div>
                 <h3>2024年联盟赛上海站季军</h3>
                 <p>队伍在联盟赛取得的最好成绩</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/24RMUL.jpg');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">🥉</div>
                 <h3>2025年联盟赛上海站季军</h3>
                 <p>全体队员在李柯轩队长的引领下，成功蝉联上海站季军！</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/25RMUL.jpg');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">🏆</div>
                 <h3>2025年分区赛东部赛区冠军</h3>
                 <p>我们是冠军！</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/25RMUC.jpg');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">🎉</div>
                 <h3>2025年国赛八强</h3>
                 <p>再创历史！</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/25GS.jpg');"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">📄</div>
                 <h3>2025年开源三等奖</h3>
                 <p>sp_vision_25的开源大受好评，我队首次在开源方面获奖</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);"></div>
             </article>
 
             <article class="project-card">
                 <div class="card-icon">⭐</div>
                 <h3>RM Award 2025 —— 李柯轩</h3>
                 <p>太阳，无需多言✋😭✋</p>
-                <div class="card-bg-image" style="background-image: none;"></div>
+                <div class="card-bg-image" style="background-image: url('/images/lkx.jpg');"></div>
             </article>
 
         </section>
