--- a/index.html
+++ b/index.html
@@ -39,18 +39,23 @@
         </header>
 
         <main class="hero">
-            <h1><span class="gradient-text">SuperPower's</span></h1>
-            <h2>Official Website</h2>
-            <div class="hero-buttons">
-                <a href="/about/about.html">
-                    <button class="btn btn-primary">About Us</button>
-                </a>
-                <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" target="_blank">
-                    <button class="btn btn-secondary">Lectures</button>
-                </a>
-                <a href="https://github.com/TongjiSuperPower" target="_blank">
-                    <button class="btn btn-secondary">Github</button>
-                </a>
+            <div class="hero-content">
+                <h1><span class="gradient-text">SuperPower's</span></h1>
+                <h2>Official Website</h2>
+                <div class="hero-buttons">
+                    <a href="/about/about.html">
+                        <button class="btn btn-primary">About Us</button>
+                    </a>
+                    <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" target="_blank">
+                        <button class="btn btn-secondary">Lectures</button>
+                    </a>
+                    <a href="https://github.com/TongjiSuperPower" target="_blank">
+                        <button class="btn btn-secondary">Github</button>
+                    </a>
+                </div>
+            </div>
+            <div class="hero-logo">
+                <img src="/images/ts_logo.png" alt="SuperPower Logo">
             </div>
         </main>
 
