change leaders to teammates

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
             <article class="project-card">
                 <div class="card-icon">🌞</div>
-                <h3>领导层概述</h3>
-                <p>一支优秀的队伍源自一个更优秀的领导层</p>
-                <div class="card-bg-image" style="background-image: url('/images/logo.png');"></div>
+                <h3>优秀队员展示</h3>
+                <p>一支优秀的队伍源自一群优秀队员</p>
+                <div class="card-bg-image" style="background-image: url('/images/25GS.jpg');"></div>
             </article>
 
             <article class="project-card">
