fix about.html wrong link

--- a/about/about.html
+++ b/about/about.html
@@ -29,7 +29,7 @@
             </div>
             <nav class="nav-right">
                 <a href="/index.html" class="nav-link">Home</a>
-                <a href="/about/index.html" class="nav-link">About</a>
+                <a href="/about/about.html" class="nav-link">About</a>
                 <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" class="nav-link"
                     target="_blank">Lectures</a>
                 <div class="nav-divider"></div>
@@ -78,7 +78,9 @@
                 <div class="card-icon">📄</div>
                 <h3>2025年开源三等奖</h3>
                 <p>sp_vision_25的开源大受好评，我队首次在开源方面获奖</p>
-                <div class="card-bg-image" style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);"></div>
+                <div class="card-bg-image"
+                    style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);">
+                </div>
             </article>
 
             <article class="project-card">
