fix about.html error page layout

--- a/about/about.html
+++ b/about/about.html
@@ -39,9 +39,11 @@
         </header>
 
         <main class="hero">
-            <h1><span class="gradient-text">SuperPower</span></h1>
-            <h2>About Us</h2>
-            <h3>过往荣誉</h3>
+            <div class="hero-content">
+                <h1><span class="gradient-text">SuperPower</span></h1>
+                <h2>About Us</h2>
+                <h3>过往荣誉</h3>
+            </div>
         </main>
 
         <section class="project-grid">
