--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" class="nav-link"
                     target="_blank">Lectures</a>
                 <div class="nav-divider"></div>
-                <a href="#" class="nav-icon" title="">GH</a>
-                <a href="#" class="nav-icon" title="">IN</a>
+                <a href="https://github.com/TongjiSuperPower" class="nav-icon" title="">Github</a>
+                <a href="https://space.bilibili.com/651837546" class="nav-icon" title="">Bilibili</a>
             </nav>
         </header>
 
