add openSource page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="nav-right">
                 <a href="/index.html" class="nav-link">Home</a>
                 <a href="/about/about.html" class="nav-link">About</a>
-                <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" class="nav-link"
+                <a href="https://space.bilibili.com/651837546/lists/6386496?type=season" class="nav-link"
                     target="_blank">Lectures</a>
                 <div class="nav-divider"></div>
                 <a href="https://github.com/TongjiSuperPower" class="nav-icon" title="">Github</a>
@@ -46,7 +46,7 @@
                     <a href="/about/about.html">
                         <button class="btn btn-primary">About Us</button>
                     </a>
-                    <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" target="_blank">
+                    <a href="https://space.bilibili.com/651837546/lists/6386496?type=season" target="_blank">
                         <button class="btn btn-secondary">Lectures</button>
                     </a>
                     <a href="https://github.com/TongjiSuperPower" target="_blank">
@@ -60,16 +60,17 @@
         </main>
 
         <section class="project-grid">
-
-            <article class="project-card">
-                <div class="card-icon">📚</div>
-                <h3>开源汇总</h3>
-                <p>一起共建开源环境</p>
-                <p>人人为我，我为人人</p>
-                <div class="card-bg-image"
-                    style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);">
-                </div>
-            </article>
+            <a href="/openSource/openSource.html">
+                <article class="project-card">
+                    <div class="card-icon">📚</div>
+                    <h3>开源汇总</h3>
+                    <p>一起共建开源环境</p>
+                    <p>人人为我，我为人人</p>
+                    <div class="card-bg-image"
+                        style="background-image: url(https://api.star-history.com/svg?repos=TongjiSuperPower/sp_vision_25&type=Date);">
+                    </div>
+                </article>
+            </a>
 
             <article class="project-card">
                 <div class="card-icon">🌞</div>
