--- a/openSource/openSource.html
+++ b/openSource/openSource.html
@@ -55,7 +55,7 @@
                     <h3>sp_vision_25</h3>
                     <p>一个专为RoboMaster比赛设计的、高性能的视觉自瞄算法。无ROS依赖，使用模块化架构，提出了“轨迹视角下的自瞄理论”。相比传统自瞄算法，该算法实现更简洁、调试更方便、效果更好。</p>
                     <div class="card-tags">
-                        <span class="tag">C++</span>
+                        <span class="tag">C/C++</span>
                         <span class="tag">OpenCV</span>
                         <span class="tag">Vision Algorithm</span>
                         <span class="tag">YOLO</span>
@@ -65,6 +65,25 @@
                             class="btn btn-secondary">GitHub</a>
                         <a href="https://bbs.robomaster.com/article/803315?source=4" target="_blank"
                             class="btn btn-secondary">文档</a>
+                    </div>
+                </div>
+            </article>
+
+            <article class="os-card">
+                <div class="card-image">
+                    <img src="/images/sp_middleware.png" alt="sp_middleware图片">
+                </div>
+                <div class="card-content">
+                    <h3>sp_middleware</h3>
+                    <p>同济大学SuperPower战队25赛季电控中间件。</p>
+                    <div class="card-tags">
+                        <span class="tag">C/C++</span>
+                        <span class="tag">Control Algorithm</span>
+                        <span class="tag">YOLO</span>
+                    </div>
+                    <div class="card-links">
+                        <a href="https://github.com/TongjiSuperPower/sp_middleware" target="_blank"
+                            class="btn btn-secondary">GitHub</a>
                     </div>
                 </div>
             </article>
