--- a/robots/robots.html
+++ b/robots/robots.html
@@ -23,11 +23,10 @@
     <div id="page1">
         <nav>
             <div class="nav-items">
-                <a id="Store" href="/index.html">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="/about/about.html" class="nav-link">About</a>
                 <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" class="nav-link"
                     target="_blank">Lectures</a>
-                <i class="ri-menu-line"></i>
             </div>
         </nav>
 
@@ -65,7 +64,7 @@
             <div class="hero-section hero-section3 section4-1">
                 <div class="hero-section-img">
                     <div class="hero-section-p">
-                        <h2>Bastion</h2>
+                        <h2>高坚果</h2>
                         <h3>时代的眼泪</h3>
                     </div>
                 </div>
