update robots page

--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
                 <div class="card-bg-image" style="background-image: url('/images/25GS.jpg');"></div>
             </article>
 
-            <article class="project-card">
-                <div class="card-icon">🤖</div>
-                <h3><a href="/robots/robots.html">机器人介绍</a></h3>
-                <p>一众优秀的机器人为队伍立下汗马功劳</p>
-                <div class="card-bg-image" style="background-image:url('/images/ascento.JPG');"></div>
-            </article>
+            <a href="/robots/robots.html">
+                <article class="project-card">
+                    <div class="card-icon">🤖</div>
+                    <h3>机器人介绍</h3>
+                    <p>一众优秀的机器人为队伍立下汗马功劳</p>
+                    <div class="card-bg-image" style="background-image:url('/images/ascento.JPG');"></div>
+                </article>
+            </a>
 
             <a href="/competition/competition.html">
                 <article class="project-card">
