update navbar of robots page

--- a/robots/robots.html
+++ b/robots/robots.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuperPower Official Website</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
@@ -13,128 +16,136 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
-<body id="body">
-
-    <div id="main">
-        <div id="page1">
-            <nav>
-                <div class="nav-items">
-                    <a href="/index.html">Home</a>
-                    <a href="/about/about.html" class="nav-link">About</a>
-                    <a href="https://space.bilibili.com/651837546/lists/3790652?type=season" class="nav-link"
-                        target="_blank">Lectures</a>
-                </div>
-            </nav>
-
-            <div class="hero-section hero">
-                <div class="hero-section-img">
-                    <div class="hero-section-p hero-p">
-                        <h2>ZeroMind</h2>
-                        <h3>Precise. Agile.</h3>
+<body id="body" class="dark-mode">
+    <div class="container">
+        <div id="main">
+            <div id="page1">
+                <header class="navbar">
+                    <div class="nav-left">
+                        <a href="/index.html" class="nav-logo">同济SuperPower</a>
                     </div>
-                </div>
-
-            </div>
-
-            <div class="hero-section hero-section2">
-                <div class="hero-section-img">
-                    <div class="hero-section-p text1">
-                        <h2>Darth Vade</h2>
-                        <h3>Old Soldier BBQ</h3>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="hero-section hero-section3">
-                <div class="hero-section-img">
-                    <div class="hero-section-p hero-p">
-                        <h2>ATM</h2>
-                        <h3>经济大师</h3>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="hero-section4">
-                <div class="hero-section hero-section3 section4-1">
+                    <nav class="nav-right">
+                        <a href="/index.html" class="nav-link">Home</a>
+                        <a href="/about/about.html" class="nav-link">About</a>
+                        <a href="https://space.bilibili.com/651837546/lists/6386496?type=season" class="nav-link"
+                            target="_blank">Lectures</a>
+                        <div class="nav-divider"></div>
+                        <a href="https://github.com/TongjiSuperPower" class="nav-icon" title="">Github</a>
+                        <a href="https://space.bilibili.com/651837546" class="nav-icon" title="">Bilibili</a>
+                    </nav>
+                </header>
+                <div class="hero-section hero">
                     <div class="hero-section-img">
-                        <div class="hero-section-p">
-                            <h2>高坚果</h2>
-                            <h3>时代的眼泪</h3>
+                        <div class="hero-section-p hero-p">
+                            <h2>ZeroMind</h2>
+                            <h3>Precise. Agile.</h3>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="hero-section hero-section3 section4-2">
+                <div class="hero-section hero-section2">
                     <div class="hero-section-img">
-                        <div class="hero-section-p text3">
-                            <h2>Pioneer</h2>
-                            <h3>Next level adventure.</h3>
+                        <div class="hero-section-p text1">
+                            <h2>Darth Vade</h2>
+                            <h3>Old Soldier BBQ</h3>
                         </div>
                     </div>
 
                 </div>
 
-            </div>
-
-            <div class="hero-section4">
-                <div class="hero-section hero-section3 section5-1">
+                <div class="hero-section hero-section3">
                     <div class="hero-section-img">
-                        <div class="hero-section-p text4">
-                            <h2>Dart</h2>
-                            <h3>4 in 4</h3>
+                        <div class="hero-section-p hero-p">
+                            <h2>ATM</h2>
+                            <h3>经济大师</h3>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="hero-section hero-section3 section5-2">
-                    <div class="hero-section-img">
-                        <div class="hero-section-p">
-                            <h2>Radar</h2>
-                            <h3>Omniscient Eye</h3>
+                <div class="hero-section4">
+                    <div class="hero-section hero-section3 section4-1">
+                        <div class="hero-section-img">
+                            <div class="hero-section-p">
+                                <h2>高坚果</h2>
+                                <h3>时代的眼泪</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="hero-section hero-section3 section4-2">
+                        <div class="hero-section-img">
+                            <div class="hero-section-p text3">
+                                <h2>Pioneer</h2>
+                                <h3>Next level adventure.</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="hero-section4">
+                    <div class="hero-section hero-section3 section5-1">
+                        <div class="hero-section-img">
+                            <div class="hero-section-p text4">
+                                <h2>Dart</h2>
+                                <h3>4 in 4</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="hero-section hero-section3 section5-2">
+                        <div class="hero-section-img">
+                            <div class="hero-section-p">
+                                <h2>Radar</h2>
+                                <h3>Omniscient Eye</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="slider">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide s1"></div>
+                            <div class="swiper-slide s2"></div>
+                            <div class="swiper-slide s3"></div>
+                            <div class="swiper-slide s4"></div>
+                            <div class="swiper-slide s5"></div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination">
                         </div>
                     </div>
 
-                </div>
 
-            </div>
-
-            <div class="slider">
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide s1"></div>
-                        <div class="swiper-slide s2"></div>
-                        <div class="swiper-slide s3"></div>
-                        <div class="swiper-slide s4"></div>
-                        <div class="swiper-slide s5"></div>
-                    </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination">
-                    </div>
                 </div>
 
 
             </div>
-
 
         </div>
-
-    </div>
-    <footer>
-        <div class="footer2">
-        </div>
-        <div class="footer3">
-            <div class="panel1">
-                Copyright © 2025 SuperPower. All rights reserved.
+        <footer>
+            <div class="footer2">
             </div>
-        </div>
-    </footer>
+            <div class="footer3">
+                <div class="panel1">
+                    Copyright © 2025 SuperPower. All rights reserved.
+                </div>
+            </div>
+        </footer>
     </div>
     </div>
 
@@ -147,6 +158,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+    </div>
 </body>
 
 </html>
