--- a/competition/competition.html
+++ b/competition/competition.html
@@ -49,30 +49,43 @@
 
                 <div class="panel-left">
                     <h2>ZHIHAO 2026</h2>
-                    <h3>赛事介绍</h3>
-                    <p>在25赛季的操作手选拔中，我们首次引入了队内实车瑞士轮单挑赛，以此作为操作手选拔的重要依据，同时以反应时间和瞄准速度测试结果作为辅助参考。26赛季我们迎来了更多操作手候选人，由此志豪杯应运而生，RMer们将在虚拟赛场与实际场地中不断战斗，最终决出正式操作手名单。
-                    </p>
-
                     <h3>赛事安排</h3>
-                    <ul class="timeline">
-                        暂未公布
-                        <!-- <li>
-                            <strong>FPS游戏对战</strong>
-                            <span>考察游戏理解和交流沟通能力。</span>
-                        </li>
-                        <li>
-                            <strong>26新规研究</strong>
-                            <span>考察对RM2026新规的理解程度</span>
-                        </li>
-                        <li>
-                            <strong>模拟器对抗</strong>
-                            <span>使用华南虎模拟器RoboSouls 进行联盟赛3V3对抗</span>
-                        </li>
-                        <li>
-                            <strong>实车演练</strong>
-                            <span>操作步兵、英雄等机器人，发射弹丸实际对抗</span>
-                        </li> -->
-                    </ul>
+
+                    <div class="vertical-timeline">
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <span class="timeline-date">11月22日</span>
+                                <h5 class="timeline-title">CS2 5v5对抗赛</h5>
+                                <p class="timeline-desc">
+                                    考察游戏理解和交流沟通能力。形式为完美平台自建房，每次最多双方共10人。对局数视报名人数而定，组队为随机分配，地图为炙热沙城Ⅱ。</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <span class="timeline-date">11月29日</span>
+                                <h5 class="timeline-title">Robosouls 3V3对抗赛</h5>
+                                <p class="timeline-desc">使用华南虎模拟器RoboSouls的3V3联盟赛模式，着重考察交流沟通能力和对比赛的理解。</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <span class="timeline-date">12月6日</span>
+                                <h5 class="timeline-title">实车瑞士轮单挑赛</h5>
+                                <p class="timeline-desc">操作实车步兵进行瑞士轮单挑赛，采用双败制，考察候选人对实车的操作、感受能力。</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <span class="timeline-date">11月14日-12月7日</span>
+                                <h5 class="timeline-title">赛事规则理解考察</h5>
+                                <p class="timeline-desc">通过撰写文档的形式，考察候选人对26赛季新规则的理解能力，面对赛场具体情况的应变能力。</p>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="announcement">
                         <h3>首次正式举办操作手选拔赛</h3>
@@ -104,6 +117,62 @@
                 </div>
 
             </section>
+
+            <section class="match-progress">
+                <h3>赛事进程</h3>
+
+                <div class="table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>轮次</th>
+                                <th>对战双方</th>
+                                <th>结果 (比分)</th>
+                                <th>获胜队伍</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>CS2 5v5对抗赛</td>
+                                <td>A1 vs A2</td>
+                                <td>13 - 7</td>
+                                <td><span class="team-winner">A1</span></td>
+                            </tr>
+                            <tr>
+                                <td>CS2 5v5对抗赛</td>
+                                <td>B1 vs B2</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛</td>
+                                <td>(待定) vs (待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛</td>
+                                <td>(待定) vs (待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛</td>
+                                <td>(待定) vs (待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛</td>
+                                <td>(待定) vs (待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
         </main>
 
     </div>
