fix timeline & result

--- a/competition/competition.html
+++ b/competition/competition.html
@@ -55,7 +55,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">11月22日</span>
+                                <span class="timeline-date">11月15日</span>
                                 <h5 class="timeline-title">CS2 5v5对抗赛</h5>
                                 <p class="timeline-desc">
                                     考察游戏理解和交流沟通能力。形式为完美平台自建房，每次最多双方共10人。对局数视报名人数而定，组队为随机分配，地图为炙热沙城Ⅱ。</p>
@@ -64,7 +64,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">11月29日</span>
+                                <span class="timeline-date">11月22日</span>
                                 <h5 class="timeline-title">Robosouls 3V3对抗赛</h5>
                                 <p class="timeline-desc">使用华南虎模拟器RoboSouls的3V3联盟赛模式，着重考察交流沟通能力和对比赛的理解。</p>
                             </div>
@@ -72,7 +72,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">12月6日</span>
+                                <span class="timeline-date">11月29日</span>
                                 <h5 class="timeline-title">实车瑞士轮单挑赛</h5>
                                 <p class="timeline-desc">操作实车步兵进行瑞士轮单挑赛，采用双败制，考察候选人对实车的操作、感受能力。</p>
                             </div>
@@ -80,7 +80,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">11月14日-12月7日</span>
+                                <span class="timeline-date">11月14日-11月29日</span>
                                 <h5 class="timeline-title">赛事规则理解考察</h5>
                                 <p class="timeline-desc">通过撰写文档的形式，考察候选人对26赛季新规则的理解能力，面对赛场具体情况的应变能力。</p>
                             </div>
@@ -135,14 +135,14 @@
                             <tr>
                                 <td>CS2 5v5对抗赛</td>
                                 <td>A1 vs A2</td>
-                                <td>13 - 7</td>
+                                <td>13 - 6</td>
                                 <td><span class="team-winner">A1</span></td>
                             </tr>
                             <tr>
                                 <td>CS2 5v5对抗赛</td>
                                 <td>B1 vs B2</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>8 - 13</td>
+                                <td><span class="team-winner">B2</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛</td>
